--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "postcss": "^8.5.5",
+        "postcss": "^8.5.6",
         "postcss-nesting": "^13.0.2",
         "tailwindcss": "^3.4.17",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "flowbite": "^3.1.2"
     }
 }
